--- a/pages/change_password_prank.html
+++ b/pages/change_password_prank.html
@@ -83,38 +83,38 @@
     </style>
 </head>
 <body>
-    <div class="prank-container">
-        <h1 id="prankTitle">¡Es mentira!</h1>
-        <p id="prankMessage">¿En serio te la creíste? ¿Cómo te va a costar TANTO? ¡Qué carajo! ¡Qué mierda!</p>
+      <div class="prank-container">
+    <h1 id="prankTitle">¡Es mentira!</h1>
+    <p id="prankMessage">¿En serio te la creíste? ¿Cómo te va a costar TANTO? ¡Qué carajo! ¡Qué mierda!</p>
 
-        <button onclick="goBackToLogin()">Volver al Login</button>
-    </div>
-     <div id="trollVideoContainer" style="display:none; width:100%; text-align:center; margin-top:20px;">
-            <video id="trollVideo" width="640" autoplay muted loop>
-                <source src="videos/BAHAHA.mp4" type="video/mp4">
-                Tu navegador no soporta el video.
-            </video>
-        </div>
+    <button onclick="goBackToLogin()">Volver al Login</button>
+</div>
 
+<div id="trollVideoContainer" style="display:none; width:100%; text-align:center; margin-top:20px;">
+    <video id="trollVideo" width="640" autoplay muted loop>
+        <source src="videos/BAHAHA.mp4" type="video/mp4">
+        Tu navegador no soporta el video.
+    </video>
+</div>
 
-   <script>
+<script>
     let changePasswordAttempts = parseInt(sessionStorage.getItem('changePasswordAttempts')) || 0;
 
     const prankTitle = document.getElementById('prankTitle');
     const prankMessage = document.getElementById('prankMessage');
 
-    const videoContainer = document.getElementById('videoContainer');
+    const videoContainer = document.getElementById('trollVideoContainer'); // ✔ Arreglado
     const trollVideo = document.getElementById('trollVideo');
 
     if (changePasswordAttempts > 1) {
         prankTitle.style.display = "none";
         prankMessage.style.display = "none";
 
-        videoContainer.style.display = "block";
+        videoContainer.style.display = "block"; // ✔ Ahora sí funciona
         trollVideo.play();
     }
 
-    // Para detectar errores reales del video
+    // Debug de errores de video
     trollVideo.addEventListener('error', () => {
         alert("Error cargando video: " + trollVideo.currentSrc);
     });
@@ -123,5 +123,7 @@
         window.location.href = '../index.html';
     }
 </script>
+
 </body>
+
 </html>
