--- a/pages/change_password_prank.html
+++ b/pages/change_password_prank.html
@@ -83,19 +83,19 @@
     </style>
 </head>
 <body>
-      <div class="prank-container">
-    <h1 id="prankTitle">¡Es mentira!</h1>
-    <p id="prankMessage">¿En serio te la creíste? ¿Cómo te va a costar TANTO? ¡Qué carajo! ¡Qué mierda!</p>
+  <div class="prank-container">
+      <h1 id="prankTitle">¡Es mentira!</h1>
+      <p id="prankMessage">¿En serio te la creíste? ¿Cómo te va a costar TANTO? ¡Qué carajo! ¡Qué mierda!</p>
 
-    <button onclick="goBackToLogin()">Volver al Login</button>
-</div>
+      <div id="trollVideoContainer" style="display:none; width:100%; text-align:center; margin-top:20px;">
+          <video id="trollVideo" width="640" autoplay loop>
+              <source src="videos/BAHAHA.mp4" type="video/mp4">
+              Tu navegador no soporta el video.
+          </video>
+      </div>
 
-<div id="trollVideoContainer" style="display:none; width:100%; text-align:center; margin-top:20px;">
-    <video id="trollVideo" width="640" autoplay muted loop>
-        <source src="videos/BAHAHA.mp4" type="video/mp4">
-        Tu navegador no soporta el video.
-    </video>
-</div>
+      <button onclick="goBackToLogin()">Volver al Login</button>
+  </div>
 
 <script>
     let changePasswordAttempts = parseInt(sessionStorage.getItem('changePasswordAttempts')) || 0;
@@ -103,27 +103,29 @@
     const prankTitle = document.getElementById('prankTitle');
     const prankMessage = document.getElementById('prankMessage');
 
-    const videoContainer = document.getElementById('trollVideoContainer'); // ✔ Arreglado
+    const videoContainer = document.getElementById('trollVideoContainer');
     const trollVideo = document.getElementById('trollVideo');
 
     if (changePasswordAttempts > 1) {
         prankTitle.style.display = "none";
         prankMessage.style.display = "none";
 
-        videoContainer.style.display = "block"; // ✔ Ahora sí funciona
+        videoContainer.style.display = "block";
         trollVideo.play();
     }
 
-    // Debug de errores de video
-    trollVideo.addEventListener('error', () => {
-        alert("Error cargando video: " + trollVideo.currentSrc);
-    });
+    // Habilitar sonido al hacer clic
+    document.addEventListener("click", () => {
+        trollVideo.muted = false;
+        trollVideo.play();
+    }, { once: true });
 
     function goBackToLogin() {
         window.location.href = '../index.html';
     }
 </script>
-
 </body>
 
+
 </html>
+
