--- a/pages/change_password_prank.html
+++ b/pages/change_password_prank.html
@@ -80,52 +80,83 @@
             transform: translateY(-5px) scale(1.02);
             box-shadow: 0 8px 20px rgba(0, 0, 0, 0.4);
         }
+        /* Overlay gris que cubre toda la pantalla */
+      #fullScreenOverlay {
+          position: fixed;
+          top: 0;
+          left: 0;
+          width: 100vw;
+          height: 100vh;
+          background: rgba(50, 50, 50, 0.7); /* gris semitransparente */
+          display: flex;
+          justify-content: center;
+          align-items: center;
+          color: white;
+          font-size: 35px;
+          font-weight: bold;
+          z-index: 9999;
+          cursor: pointer;
+          text-align: center;
+      }
     </style>
 </head>
 <body>
-  <div class="prank-container">
+  
+  <!-- OVERLAY QUE CUBRE TODA LA PANTALLA -->
+  <div id="fullScreenOverlay">
+      <p>Click para cambiar contraseña</p>
+  </div>
+
+  <div class="prank-container" id="prankContent">
       <h1 id="prankTitle">¡Es mentira!</h1>
       <p id="prankMessage">¿En serio te la creíste? ¿Cómo te va a costar TANTO? ¡Qué carajo! ¡Qué mierda!</p>
-
-      <div id="trollVideoContainer" style="display:none; width:100%; text-align:center; margin-top:20px;">
-          <video id="trollVideo" width="640" autoplay loop>
-              <source src="videos/BAHAHA.mp4" type="video/mp4">
-              Tu navegador no soporta el video.
-          </video>
-      </div>
 
       <button onclick="goBackToLogin()">Volver al Login</button>
   </div>
 
-<script>
-    let changePasswordAttempts = parseInt(sessionStorage.getItem('changePasswordAttempts')) || 0;
+  <!-- CONTENEDOR DEL VIDEO DENTRO DEL CUADRADO -->
+  <div id="trollVideoContainer" style="display:none; width:100%; text-align:center; margin-top:20px;">
+      <video id="trollVideo" width="640" autoplay muted loop>
+          <source src="videos/BAHAHA.mp4" type="video/mp4">
+          Tu navegador no soporta el video.
+      </video>
+  </div>
 
-    const prankTitle = document.getElementById('prankTitle');
-    const prankMessage = document.getElementById('prankMessage');
+  <script>
+      let changePasswordAttempts = parseInt(sessionStorage.getItem('changePasswordAttempts')) || 0;
 
-    const videoContainer = document.getElementById('trollVideoContainer');
-    const trollVideo = document.getElementById('trollVideo');
+      const prankTitle = document.getElementById('prankTitle');
+      const prankMessage = document.getElementById('prankMessage');
 
-    if (changePasswordAttempts > 1) {
-        prankTitle.style.display = "none";
-        prankMessage.style.display = "none";
+      const overlay = document.getElementById('fullScreenOverlay');
+      const prankContent = document.getElementById('prankContent');
+      const videoContainer = document.getElementById('trollVideoContainer');
+      const trollVideo = document.getElementById('trollVideo');
 
-        videoContainer.style.display = "block";
-        trollVideo.play();
-    }
+      // 🔹 Si el usuario ya intentó cambiar la contraseña antes:
+      if (changePasswordAttempts > 1) {
+          // Mostrar overlay al cargar
+          overlay.style.display = "flex";
 
-    // Habilitar sonido al hacer clic
-    document.addEventListener("click", () => {
-        trollVideo.muted = false;
-        trollVideo.play();
-    }, { once: true });
+          prankContent.style.display = "none";
+          videoContainer.style.display = "block";
+          trollVideo.play();
+      }
 
-    function goBackToLogin() {
-        window.location.href = '../index.html';
-    }
-</script>
+      // 🔹 Click en el overlay → activar audio + ocultar overlay
+      overlay.addEventListener("click", () => {
+          overlay.style.display = "none";      // quitar pantalla gris
+          trollVideo.muted = false;            // activar sonido
+          trollVideo.play();                   // reproducir
+      });
+
+      function goBackToLogin() {
+          window.location.href = '../index.html';
+      }
+  </script>
 </body>
 
 
 </html>
+
 
