--- a/pages/change_password_prank.html
+++ b/pages/change_password_prank.html
@@ -98,17 +98,7 @@
           cursor: pointer;
           text-align: center;
       }
-        #trollVideoContainer {
-            display: flex !important;
-            justify-content: center;   /* Centra horizontal */
-            align-items: center;       /* Centra vertical */
-            width: 100%;
-            margin-top: 20px;
-        }
-                #trollVideo {
-            max-width: 100%;
-            height: auto;
-        }
+        
     </style>
 </head>
 <body>
@@ -126,12 +116,12 @@
   </div>
 
   <!-- CONTENEDOR DEL VIDEO DENTRO DEL CUADRADO -->
-  <div id="trollVideoContainer" style="display:none;">
-        <video id="trollVideo" width="640" autoplay muted loop>
-            <source src="videos/BAHAHA.mp4" type="video/mp4">
-            Tu navegador no soporta el video.
-        </video>
-    </div>
+  <div id="trollVideoContainer" style="display:none; width:100%; text-align:center; margin-top:20px;">
+    <video id="trollVideo" width="640" autoplay muted loop>
+        <source src="videos/BAHAHA.mp4" type="video/mp4">
+        Tu navegador no soporta el video.
+    </video>
+</div>
 
   <script>
       let changePasswordAttempts = parseInt(sessionStorage.getItem('changePasswordAttempts')) || 0;
@@ -169,6 +159,7 @@
 
 
 </html>
+
 
 
 
