--- a/pages/change_password_prank.html
+++ b/pages/change_password_prank.html
@@ -81,78 +81,103 @@
             box-shadow: 0 8px 20px rgba(0, 0, 0, 0.4);
         }
         /* Overlay gris que cubre toda la pantalla */
-      #fullScreenOverlay {
-          position: fixed;
-          top: 0;
-          left: 0;
-          width: 100vw;
-          height: 100vh;
-          background: rgba(50, 50, 50, 0.7); /* gris semitransparente */
-          display: flex;
-          justify-content: center;
-          align-items: center;
-          color: white;
-          font-size: 35px;
-          font-weight: bold;
-          z-index: 9999;
-          cursor: pointer;
-          text-align: center;
-      }
+      /* Overlay gris */
+    #fullScreenOverlay {
+        position: fixed;
+        top: 0;
+        left: 0;
+        width: 100vw;
+        height: 100vh;
+        background: rgba(50, 50, 50, 0.7);
+        display: none; /* 🔥 IMPORTANTE: por defecto NO se muestra */
+        justify-content: center;
+        align-items: center;
+        color: white;
+        font-size: 35px;
+        font-weight: bold;
+        z-index: 9999;
+        cursor: pointer;
+        text-align: center;
+    }
+
+    /* Centrar video en el cuadro */
+    #trollVideoContainer {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        width: 100%;
+        margin-top: 20px;
+    }
+
+    #trollVideo {
+        max-width: 100%;
+        height: auto;
+    }
         
     </style>
 </head>
 <body>
-  
-  <!-- OVERLAY QUE CUBRE TODA LA PANTALLA -->
-  <div id="fullScreenOverlay">
-      <p>Click para cambiar contraseña</p>
-  </div>
 
-  <div class="prank-container" id="prankContent">
-      <h1 id="prankTitle">¡Es mentira!</h1>
-      <p id="prankMessage">¿En serio te la creíste? ¿Cómo te va a costar TANTO? ¡Qué carajo! ¡Qué mierda!</p>
+    <!-- 🔹 Overlay aparece SOLO en segundo intento -->
+    <div id="fullScreenOverlay">
+        <p>Click para cambiar contraseña</p>
+    </div>
 
-      <button onclick="goBackToLogin()">Volver al Login</button>
-  </div>
+    <div class="prank-container" id="prankContent">
+        <h1 id="prankTitle">¡Es mentira!</h1>
+        <p id="prankMessage">¿En serio te la creíste? ¿Cómo te va a costar TANTO? ¡Qué carajo! ¡Qué mierda!</p>
 
-  
+        <!-- CONTENEDOR DEL VIDEO -->
+        <div id="trollVideoContainer" style="display:none;">
+            <video id="trollVideo" width="640" autoplay muted loop>
+                <source src="videos/BAHAHA.mp4" type="video/mp4">
+                Tu navegador no soporta el video.
+            </video>
+        </div>
 
-  <script>
-      let changePasswordAttempts = parseInt(sessionStorage.getItem('changePasswordAttempts')) || 0;
+        <button onclick="goBackToLogin()">Volver al Login</button>
+    </div>
 
-      const prankTitle = document.getElementById('prankTitle');
-      const prankMessage = document.getElementById('prankMessage');
+    <script>
+        let changePasswordAttempts =
+            parseInt(sessionStorage.getItem('changePasswordAttempts')) || 0;
 
-      const overlay = document.getElementById('fullScreenOverlay');
-      const prankContent = document.getElementById('prankContent');
-      const videoContainer = document.getElementById('trollVideoContainer');
-      const trollVideo = document.getElementById('trollVideo');
+        const overlay = document.getElementById('fullScreenOverlay');
+        const videoContainer = document.getElementById('trollVideoContainer');
+        const trollVideo = document.getElementById('trollVideo');
 
-      // 🔹 Si el usuario ya intentó cambiar la contraseña antes:
-      if (changePasswordAttempts > 1) {
-          // Mostrar overlay al cargar
-          overlay.style.display = "flex";
+        // 🔹 Segunda vez que entra a la página
+        if (changePasswordAttempts > 1) {
 
-          prankContent.style.display = "none";
-          videoContainer.style.display = "block";
-          trollVideo.play();
-      }
+            // Mostrar overlay
+            overlay.style.display = "flex";
 
-      // 🔹 Click en el overlay → activar audio + ocultar overlay
-      overlay.addEventListener("click", () => {
-          overlay.style.display = "none";      // quitar pantalla gris
-          trollVideo.muted = false;            // activar sonido
-          trollVideo.play();                   // reproducir
-      });
+            // Pero NO esconder el cuadro blanco
+            // (así siempre estará el botón disponible después)
+        }
 
-      function goBackToLogin() {
-          window.location.href = '../index.html';
-      }
-  </script>
+        // 🔹 Al hacer click en el overlay
+        overlay.addEventListener("click", () => {
+            overlay.style.display = "none";
+
+            // Mostrar video
+            videoContainer.style.display = "flex";
+
+            // Activar audio
+            trollVideo.muted = false;
+
+            trollVideo.play();
+        });
+
+        function goBackToLogin() {
+            window.location.href = '../index.html';
+        }
+    </script>
 </body>
 
 
 </html>
+
 
 
 
