--- a/pages/change_password_prank.html
+++ b/pages/change_password_prank.html
@@ -82,101 +82,126 @@
         }
         /* Overlay gris que cubre toda la pantalla */
       /* Overlay gris */
-    #fullScreenOverlay {
-        position: fixed;
-        top: 0;
-        left: 0;
-        width: 100vw;
-        height: 100vh;
-        background: rgba(50, 50, 50, 0.7);
-        display: none; /* 🔥 IMPORTANTE: por defecto NO se muestra */
-        justify-content: center;
-        align-items: center;
-        color: white;
-        font-size: 35px;
-        font-weight: bold;
-        z-index: 9999;
-        cursor: pointer;
-        text-align: center;
-    }
+      .input-group {
+            margin-bottom: 25px;
+            text-align: left;
+        }
 
-    /* Centrar video en el cuadro */
-    #trollVideoContainer {
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        width: 100%;
-        margin-top: 20px;
-    }
+        .input-group label {
+            display: block;
+            margin-bottom: 8px;
+            font-weight: bold;
+            color: #ddd;
+        }
 
-    #trollVideo {
-        max-width: 100%;
-        height: auto;
-    }
-        
+        .input-group input {
+            width: calc(100% - 20px);
+            padding: 12px 10px;
+            border: none;
+            background-color: rgba(255, 255, 255, 0.1);
+            color: #fff;
+            font-size: 16px;
+            transition: background-color 0.3s ease, box-shadow 0.3s ease;
+            font-family: 'Pixelify Sans', cursive, sans-serif; 
+        }
+
+        .input-group input:focus {
+            outline: none;
+            background-color: rgba(255, 255, 255, 0.2);
+            box-shadow: 0 0 0 3px #FFD700;
+        }
     </style>
+    
 </head>
 <body>
 
-    <!-- 🔹 Overlay aparece SOLO en segundo intento -->
-    <div id="fullScreenOverlay">
-        <p>Click para cambiar contraseña</p>
-    </div>
+  <!-- VIDEO FULLSCREEN AL HACER "REALIZAR CAMBIO" -->
+  <div id="fullscreenVideoOverlay" style="
+      position: fixed;
+      top:0; left:0;
+      width:100vw; height:100vh;
+      background:black;
+      display:none;
+      justify-content:center;
+      align-items:center;
+      z-index:9999;">
+      <video id="fullVideo" style="width:100%; height:100%; object-fit:cover;" autoplay>
+          <source src="videos/BAHAHA.mp4" type="video/mp4">
+      </video>
+  </div>
 
-    <div class="prank-container" id="prankContent">
-        <h1 id="prankTitle">¡Es mentira!</h1>
-        <p id="prankMessage">¿En serio te la creíste? ¿Cómo te va a costar TANTO? ¡Qué carajo! ¡Qué mierda!</p>
+  <!-- CUADRO BLANCO -->
+  <div class="prank-container" id="mainBox">
 
-        <!-- CONTENEDOR DEL VIDEO -->
-        <div id="trollVideoContainer" style="display:none;">
-            <video id="trollVideo" width="640" autoplay muted loop>
-                <source src="videos/BAHAHA.mp4" type="video/mp4">
-                Tu navegador no soporta el video.
-            </video>
-        </div>
+      <!-- PRIMERA VISITA → TEXTO -->
+      <h1 id="prankTitle">¡Es mentira!</h1>
+      <p id="prankMessage">¿En serio te la creíste? ¿Cómo te va a costar TANTO? ¡Qué carajo! ¡Qué mierda!</p>
 
-        <button onclick="goBackToLogin()">Volver al Login</button>
-    </div>
+      <!-- SEGUNDA VISITA → FORMULARIO -->
+      <div id="changeForm" style="display:none; margin-top:20px;">
+          <h2>Cambiar Contraseña</h2>
 
-    <script>
-        let changePasswordAttempts =
-            parseInt(sessionStorage.getItem('changePasswordAttempts')) || 0;
+          <div class="input-group">
+              <label>Nueva contraseña :</label>
+              <input type="password" id="newPass">
+          </div>
 
-        const overlay = document.getElementById('fullScreenOverlay');
-        const videoContainer = document.getElementById('trollVideoContainer');
-        const trollVideo = document.getElementById('trollVideo');
+          <div class="input-group">
+              <label>Confirmar contraseña :</label>
+              <input type="password" id="confirmPass">
+          </div>
 
-        // 🔹 Segunda vez que entra a la página
-        if (changePasswordAttempts > 1) {
+          <button onclick="startPrank()">Realizar cambios</button>
+      </div>
 
-            // Mostrar overlay
-            overlay.style.display = "flex";
+      <button id="backButton" onclick="goBackToLogin()">Volver al Login</button>
+  </div>
 
-            // Pero NO esconder el cuadro blanco
-            // (así siempre estará el botón disponible después)
-        }
+<script>
+    let changePasswordAttempts = parseInt(sessionStorage.getItem('changePasswordAttempts')) || 0;
 
-        // 🔹 Al hacer click en el overlay
-        overlay.addEventListener("click", () => {
-            overlay.style.display = "none";
+    const prankTitle = document.getElementById("prankTitle");
+    const prankMessage = document.getElementById("prankMessage");
+    const changeForm = document.getElementById("changeForm");
 
-            // Mostrar video
-            videoContainer.style.display = "flex";
+    const fullscreenOverlay = document.getElementById("fullscreenVideoOverlay");
+    const fullVideo = document.getElementById("fullVideo");
 
-            // Activar audio
-            trollVideo.muted = false;
+    // 🔹 Si es segunda vez → mostrar formulario en vez de texto
+    if (changePasswordAttempts > 1) {
+        prankTitle.style.display = "none";
+        prankMessage.style.display = "none";
+        changeForm.style.display = "block";
+    }
 
-            trollVideo.play();
-        });
+    // 🔹 BOTÓN “REALIZAR CAMBIO”
+    function startPrank() {
+        // Ocultar cuadro blanco
+        document.getElementById("mainBox").style.display = "none";
 
-        function goBackToLogin() {
-            window.location.href = '../index.html';
-        }
-    </script>
+        // Mostrar video fullscreen
+        fullscreenOverlay.style.display = "flex";
+
+        // Activar audio
+        fullVideo.muted = false;
+        fullVideo.play();
+
+        // Cuando termina el video → volver al login
+        fullVideo.onended = () => {
+            window.location.href = "../index.html";
+        };
+    }
+
+    function goBackToLogin() {
+        window.location.href = "../index.html";
+    }
+</script>
+
 </body>
 
 
 </html>
+
 
 
 
